# fstrent_bkitup

./: .bumpversion.cfg  .gitignore  README.md  gh_push.bat  project_structure  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/backup_utils/: __init__.py
src/fstrent_bkitup/: __init__.py  core.py
tests/: test_backup_utils.py
